💚:修复Github Actions配置文件

--- a/.github/workflows/depploy.yml
+++ b/.github/workflows/depploy.yml
@@ -20,12 +20,13 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v1
       with:
-        node-version: '12.x'
+        node-version: '18.x'
 
     - name: Install dependencies & Generate static files
       run: |
         node -v
         npm i -g hexo-cli
+        npm i --save gitalk
         npm i
         hexo clean
         hexo g
