--- a/.github/workflows/depploy.yml
+++ b/.github/workflows/depploy.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         node -v
         npm i -g hexo-cli
-        npm i --save gitalk
+        npm install hexo-generator-search --save
         npm i
         hexo clean
         hexo g
