--- a/.github/workflows/depploy.yml
+++ b/.github/workflows/depploy.yml
@@ -2,7 +2,8 @@ name: Hexo Deployment
 
 on:
   push:
-    branches: [main] # only push events on source branch trigger deployment
+    branches:
+      - main # only push events on source branch trigger deployment
 
 jobs:
   hexo-deployment:
@@ -13,33 +14,28 @@ jobs:
 
     steps:
     - name: Checkout source
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         submodules: true
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v1
+    - name: Setup Node.js 16
+      uses: actions/setup-node@v3
       with:
-        node-version: '12.x'
+        node-version: 16
 
     - name: Install dependencies & Generate static files
       run: |
         node -v
-        npm i -g hexo-cli
-        npm install hexo-generator-search --save
-        npm install hexo-render-pug --save
+        npm i hexo-cli -g
+        npm i hexo-generator-search hexo-render-pug --save
         npm i
         hexo clean
         hexo g
-    - name: Deploy to Github Pages
-      env:
-        GIT_NAME: SmRiley
-        GIT_EMAIL: ${{ secrets.GIT_EMAIL }}
-        REPO: github.com/SmRiley/SmRiley.github.io
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
-      run: |
-        cd ./public && git init -b main && git ls-files && git add .
-        git config --global user.name $GIT_NAME
-        git config --global user.email $GIT_EMAIL
-        git commit -m "Site deployed by GitHub Actions"
-        git push --force --quiet "https://$GH_TOKEN@$REPO" main:hexo
+        
+    # Output to branch `static` from `master`
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        publish_dir: ./public
+        publish_branch: hexo
+        personal_token: ${{ secrets.GH_TOKEN }}
