--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -28,7 +28,7 @@ code_word_wrap: false
 copy:
   enable: true
   copyright:
-    enable: false
+    enable: true
     limit_count: 50
 
 # social settings (社交圖標設置)
@@ -80,7 +80,7 @@ favicon: /img/favicon.svg
 
 # Avatar (頭像)
 avatar:
-  img: ./img/avatar.png
+  img: /img/avatar.png
   effect: false
 
 # Disable all banner image
@@ -90,7 +90,7 @@ disable_top_img: false
 index_img:
 
 # If the banner of page not setting, it will show the top_img
-default_top_img:
+default_top_img: /img/top.png
 
 # The banner image of archive page
 archive_img:
@@ -123,7 +123,20 @@ cover:
   position: both
   # When cover is not set, the default cover is displayed (當沒有設置cover時，默認的封面顯示)
   default_cover:
-    # - https://i.loli.net/2020/05/01/gkihqEjXxJ5UZ1C.jpg
+    - /img/random/material-1.png
+    - /img/random/material-2.png
+    - /img/random/material-3.png
+    - /img/random/material-4.png
+    - /img/random/material-5.png
+    - /img/random/material-6.png
+    - /img/random/material-7.png
+    - /img/random/material-8.png
+    - /img/random/material-9.png
+    - /img/random/material-10.png
+    - /img/random/material-11.png
+    - /img/random/material-12.png
+    - /img/random/material-13.png
+    - /img/random/material-14.png
 
 # Replace Broken Images (替換無法顯示的圖片)
 error_img:
@@ -313,7 +326,7 @@ valine:
 waline:
   serverURL: https://comment.seeull.com # Waline server address url
   bg: # waline background
-  pageview: false
+  pageview: true
   option:
     emoji: [
       https://unpkg.com/@waline/emojis@1.0.1/tieba
@@ -536,26 +549,26 @@ canvas_fluttering_ribbon:
 # canvas_nest
 # https://github.com/hustcc/canvas-nest.js
 canvas_nest:
-  enable: false
+  enable: true
   color: '0,0,255' #color of lines, default: '0,0,0'; RGB values: (R,G,B).(note: use ',' to separate.)
   opacity: 0.7 # the opacity of line (0~1), default: 0.5.
   zIndex: -1 # z-index property of the background, default: -1.
   count: 99 # the number of lines, default: 99.
-  mobile: false
+  mobile: true
 
 # Typewriter Effect (打字效果)
 # https://github.com/disjukr/activate-power-mode
 activate_power_mode:
-  enable: false
+  enable: true
   colorful: true # open particle animation (冒光特效)
   shake: true #  open shake (抖動特效)
-  mobile: false
+  mobile: true
 
 # Mouse click effects: fireworks (鼠標點擊效果: 煙火特效)
 fireworks:
   enable: true
   zIndex: 9999 # -1 or 9999
-  mobile: false
+  mobile: true
 
 # Mouse click effects: Heart symbol (鼠標點擊效果: 愛心)
 click_heart:
@@ -608,7 +621,7 @@ hr_icon:
 subtitle:
   enable: true
   # Typewriter Effect (打字效果)
-  effect: false
+  effect: true
   # loop (循環打字)
   loop: false
   # source 調用第三方服務
@@ -617,9 +630,10 @@ subtitle:
   # source: 2  調用一句網（簡體） http://yijuzhan.com/
   # source: 3  調用今日詩詞（簡體） https://www.jinrishici.com/
   # subtitle 會先顯示 source , 再顯示 sub 的內容
-  source: 1
+  source: 3
   # 如果關閉打字效果，subtitle 只會顯示 sub 的第一行文字
-  sub:
+  sub: 
+    - 名师大将莫自牢,千军万马避白袍
 
 # Loading Animation (加載動畫)
 preloader: false
@@ -646,8 +660,8 @@ aside:
       text: Follow Me
       link: https://github.com/SmRiley
   card_announcement:
-    enable: false
-    content: 欢迎投喂
+    enable: true
+    content: 我家里还蛮大的,欢迎你来我家玩,玩累了就可以直接睡觉,没问题的
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
@@ -702,7 +716,7 @@ newest_comments:
 
 # Conversion between Traditional and Simplified Chinese (簡繁轉換)
 translate:
-  enable: false
+  enable: true
   # The text of a button
   default: 繁
   # the language of website (1 - Traditional Chinese/ 2 - Simplified Chinese）
@@ -726,7 +740,7 @@ darkmode:
   # autoChangeMode: 1  Following System Settings, if the system doesn't support dark mode, it will switch dark mode between 6 pm to 6 am
   # autoChangeMode: 2  Switch dark mode between 6 pm to 6 am
   # autoChangeMode: false
-  autoChangeMode: false
+  autoChangeMode: true
 
 # Don't modify the following settings unless you know how they work (非必要請不要修改 )
 # Choose: readmode,translate,darkmode,hideAside,toc,chat,comment
@@ -781,7 +795,7 @@ note:
 # It may contain bugs and unstable, give feedback when you find the bugs.
 # https://github.com/MoOx/pjax
 pjax:
-  enable: false
+  enable: true
   exclude:
     # - xxxx
     # - xxxx
